# pystatsd

./: .gitignore  README.rst  pyproject-setuptools.toml  pyproject.toml  tox.ini
statsd/client/: stream.py  udp.py
