[tool.poetry]
name = "statsd"
version = "4.0.2"
description = "A simple statsd client."
authors = ["chuangfeng.wang <chuangfeng.wang@qunar.com>"]

[tool.poetry.dependencies]
python = ">= 3.4, <3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
